test/kube2e/upgrade/assets/auth/testapp2_arm_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-app-2
  name: test-app-2
  namespace: gloo-system
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: test-app-2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: test-app-2
    spec:
      containers:
        - args:
            - -text=Hello from test-app-2!
          image: gcr.io/solo-test-236622/http-echo
          imagePullPolicy: Always
          name: http-echo
          ports:
            - containerPort: 5678
              name: http
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 0
