test/kube2e/upgrade/assets/auth/testapp1_svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-app-1
  name: test-app-1
  namespace: gloo-system
spec:
  ports:
    - name: http
      port: 5678
      protocol: TCP
  selector:
    app: test-app-1
  sessionAffinity: None
  type: ClusterIP
