test/kube2e/upgrade/assets/auth/testapp2_svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-app-2
  name: test-app-2
  namespace: gloo-system
spec:
  ports:
    - name: http
      port: 5678
      protocol: TCP
  selector:
    app: test-app-2
  sessionAffinity: None
  type: ClusterIP
